--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
+# 테마 설정인데 내 가져온 css 파일은 어떡하지
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme           : "mmistakes/minimal-mistakes" # 샵 지웠음(22년12월26일 변경)
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
@@ -19,8 +20,8 @@ locale                   : "en-US"
 title                    : "스케치용녹색물감"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "ygre_en"
-description              : "I want to comunicate someone"
+name                     : "Grokeen"
+description              : "I want to change my life"
 #(12년 12월 26일 변경)
 url                      : "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
