--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ remote_theme           : "mmistakes/minimal-mistakes" # 샵 지웠음(22년12월
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "스케치용녹색물감"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Grokeen"
+name                     : "스케치용녹색물감"
 description              : "I want to change my life"
 #(12년 12월 26일 변경)
 url                      : "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
