--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 remote_theme           : "mmistakes/minimal-mistakes" # 샵 지웠음(22년12월26일 변경)
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-# Site Settings
+# Site Setting
 locale                   : "ko-KR"
 title                    : "스케치용녹색물감"
 title_separator          : "-"
@@ -158,7 +158,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - _posts
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
