--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,12 @@ defaults:
       comments: # true
       share: true
       related: true
+
+# _layout
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
