--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ locale                   : "ko-KR"
 title                    : "스케치용녹색물감"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "스케치용녹색물감"
+# name                     : "스케치용녹색물감"
 description              : "I want to change my life"
 #(12년 12월 26일 변경)
 url                      : "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
