--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "스케치용녹색물감"
 description              : "I want to change my life"
 #(12년 12월 26일 변경)
-url                      : "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ineverchangegreen.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
