--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@
 # minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Setting
-locale                   : "ko-KR"
+locale                   : # "ko-KR"
 title                    : 
 title_separator          : 
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "스케치용녹색물감"
-description              : "I want to change my life"
+name                     : # "스케치용녹색물감"
+description              : # "I want to change my life"
 #(12년 12월 26일 변경)
-url                      : "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
