--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@
 # minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Setting
-locale                   : # "ko-KR"
-title                    : 
-title_separator          : 
+locale                   : "ko-KR"
+# title                    : "스케치용녹색물감" # 202308250123 상단에 표시되는 블로그 제목
+# title_separator          : 
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : # "스케치용녹색물감"
-description              : # "I want to change my life"
+# description              : # "I want to change my life"
 #(12년 12월 26일 변경)
 url                      : # "https://Grokeen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
