--- a/_config.yml
+++ b/_config.yml
@@ -100,10 +100,10 @@ instagram:
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
-social:
+social                    :
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links                   : # An array of links to social media profiles
 
 
 
@@ -229,10 +229,11 @@ kramdown:
   enable_coderay: false
 
 
+# 202308250152 스타일 CSS 주석
 # Sass/SCSS
-sass:
-  sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+# sass:
+#   sass_dir: _sass
+#   style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 
 # Outputting
